fixed hovering issue with navbar dot on mobile
Former-commit-id: 3794e69415d59a6b6db6405a5cb09857d625aa46

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
     }
 }
 
+.uk-dotnav>*>:hover{
+    background-color:rgba(0,0,0,0);
+    border: 1px solid rgba(255, 255, 255, 0.8);
+}
+
 .uk-dotnav>.uk-active>* {
     background-color: rgb(255, 255, 255);
 }
